chore: add generated translation files for comment sorting options

--- a/ghost/i18n/locales/bs/comments.json
+++ b/ghost/i18n/locales/bs/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Postani član portala {{publication}} za pristup diskusiji.",
     "Become a paid member of {{publication}} to start commenting.": "Postani plaćeni član portala {{publication}} za pristup diskusiji.",
+    "Best": "",
     "Cancel": "Otkaži",
     "Comment": "Komentar",
     "Complete your profile": "Dovrši svoj profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Diskusija članova",
     "Name": "Ime",
     "Neurosurgeon": "Neurohirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Prije jedan sat",
     "One min ago": "Prije jedan minut",
