--- a/ghost/i18n/locales/ca/comments.json
+++ b/ghost/i18n/locales/ca/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "N'estàs segur?",
     "Become a member of {{publication}} to start commenting.": "Fes-te membre de {{publication}} per començar a comentar.",
     "Become a paid member of {{publication}} to start commenting.": "Fes-te membre de pagament de {{publication}} per començar a comentar",
+    "Best": "",
     "Cancel": "Cancel·la",
     "Comment": "Comentari",
     "Complete your profile": "Completa el teu perfil",
@@ -40,6 +41,8 @@
     "Member discussion": "Debat de membres",
     "Name": "Nom",
     "Neurosurgeon": "Neurocirurgià",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Un cop esborrat, aquest comentari no es pot recuperar",
     "One hour ago": "Fa una hora",
     "One min ago": "Fa un minut",
