--- a/ghost/i18n/locales/context.json
+++ b/ghost/i18n/locales/context.json
@@ -23,6 +23,7 @@
     "Become a member of {{publication}} to start commenting.": "A call to action letting people know they need to sign up before commenting",
     "Become a paid member of {site} to get access to all premium content.": "",
     "Become a paid member of {{publication}} to start commenting.": "A call to action letting people know they need to become paid members before commenting",
+    "Best": "",
     "Billing info": "A label for the user billing information section",
     "Black Friday": "An example offer name",
     "By {authors}": "Newsletter header text",
@@ -153,12 +154,14 @@
     "Name": "A label to indicate a member's name",
     "Need more help? Contact support": "A link to contact support",
     "Neurosurgeon": "Example of an expertise of a person used in comments when editing your expertise",
+    "Newest": "",
     "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "A paragraph in the email suppression FAQ",
     "No matches found": "Shown in search when 0 results",
     "No member exists with this e-mail address.": "Shown when trying to sign in.",
     "No member exists with this e-mail address. Please sign up first.": "Shown when trying to sign in.",
     "Not receiving emails?": "A link in portal to take members to an FAQ area about what to do if you're not receiving emails",
     "Now check your email!": "A confirmation message after logging in or signing up",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Warning message before deleting a comment",
     "Once resubscribed, if you still don't see emails in your inbox, check your spam folder. Some inbox providers keep a record of previous spam complaints and will continue to flag emails. If this happens, mark the latest newsletter as 'Not spam' to move it back to your primary inbox.": "A paragraph in the email suppression FAQ",
     "One hour ago": "Time a comment was placed",
