--- a/ghost/i18n/locales/cs/comments.json
+++ b/ghost/i18n/locales/cs/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Staňte se členem {{publication}}, abyste mohli začít komentovat.",
     "Become a paid member of {{publication}} to start commenting.": "Staňte se placeným členem {{publication}}, abyste mohli začít komentovat.",
+    "Best": "",
     "Cancel": "Zrušit",
     "Comment": "Komentář",
     "Complete your profile": "Dokončete svůj profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Diskuse členů",
     "Name": "Jméno",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Před jednou hodinou",
     "One min ago": "Před jednou minutou",
