--- a/ghost/i18n/locales/da/comments.json
+++ b/ghost/i18n/locales/da/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Er du sikker?",
     "Become a member of {{publication}} to start commenting.": "Bliv medlem af {{publication}} for at kunne skrive kommentarer.",
     "Become a paid member of {{publication}} to start commenting.": "Bliv betalende medlem af {{publication}} for at kunne skrive kommentarer.",
+    "Best": "",
     "Cancel": "Annuller",
     "Comment": "Kommentér",
     "Complete your profile": "Færdiggør din profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Medlemsdiskussion",
     "Name": "Navn",
     "Neurosurgeon": "Neurokirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Når den først er slettet, kan denne kommentar ikke gendannes.",
     "One hour ago": "En time siden",
     "One min ago": "Et minut siden",
