--- a/ghost/i18n/locales/el/comments.json
+++ b/ghost/i18n/locales/el/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Γίνετε μέλος του {{publication}} για να ξεκινήσετε να σχολιάζετε.",
     "Become a paid member of {{publication}} to start commenting.": "Γίνετε premium μέλος του {{publication}} για να ξεκινήσετε να σχολιάζετε.",
+    "Best": "",
     "Cancel": "Ακύρωση",
     "Comment": "Σχόλιο",
     "Complete your profile": "Ολοκληρώστε το προφίλ σας",
@@ -40,6 +41,8 @@
     "Member discussion": "Συζήτηση μελών",
     "Name": "Όνομα",
     "Neurosurgeon": "Νευροχειρουργός",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Πριν από μία ώρα",
     "One min ago": "Πριν από ένα λεπτό",
