--- a/ghost/i18n/locales/gd/comments.json
+++ b/ghost/i18n/locales/gd/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "A bheil thu cinnteach?",
     "Become a member of {{publication}} to start commenting.": "Clàraich nad bhall an làrach-lìn, {{publication}}, gus beachd fhàgail air.",
     "Become a paid member of {{publication}} to start commenting.": "Clàraich nad bhall phrìomhach an làrach-lìn, {{publication}}, gus beachd fhàgail air.",
+    "Best": "",
     "Cancel": "Sguir dheth",
     "Comment": "Beachd",
     "Complete your profile": "Lìon a-steach a' phròifil agad",
@@ -40,6 +41,8 @@
     "Member discussion": "Deasbad",
     "Name": "Ainm",
     "Neurosurgeon": "Niùro-làmh-lèigh",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Cha ghabh a aiseag an dèidh sguabadh às",
     "One hour ago": "O chionn uair a thìde",
     "One min ago": "O chionn mionaid",
