--- a/ghost/i18n/locales/he/comments.json
+++ b/ghost/i18n/locales/he/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "הירשמו כחברי {{publication}} כדי להתחיל להגיב.",
     "Become a paid member of {{publication}} to start commenting.": "הירשמו כחברי משלמים של {{publication}} כדי להתחיל להגיב.",
+    "Best": "",
     "Cancel": "ביטול",
     "Comment": "תגובה",
     "Complete your profile": "השלימו את הפרופיל שלכם",
@@ -40,6 +41,8 @@
     "Member discussion": "דיון חברים רשומים",
     "Name": "שם",
     "Neurosurgeon": "נוֹיְרוֹכִירוּרְג",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "לפני שעה",
     "One min ago": "לפני דקה",
