--- a/ghost/i18n/locales/hu/comments.json
+++ b/ghost/i18n/locales/hu/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Biztos vagy benne?",
     "Become a member of {{publication}} to start commenting.": "Hozzászólást csak tagok írhatnak.",
     "Become a paid member of {{publication}} to start commenting.": "Hozzászólást csak előfizetők írhatnak.",
+    "Best": "",
     "Cancel": "Mégse",
     "Comment": "Hozzászólás",
     "Complete your profile": "Profil befejezése",
@@ -40,6 +41,8 @@
     "Member discussion": "Tagok beszélgetése",
     "Name": "Név",
     "Neurosurgeon": "Idegsebész",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "A törlés után ez a hozzászólás nem állítható vissza.",
     "One hour ago": "Egy órája",
     "One min ago": "Egy perce",
