--- a/ghost/i18n/locales/id/comments.json
+++ b/ghost/i18n/locales/id/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Jadilah anggota di {{publication}} untuk mulai berkomentar.",
     "Become a paid member of {{publication}} to start commenting.": "Jadilah anggota berbayar di {{publication}} untuk mulai berkomentar.",
+    "Best": "",
     "Cancel": "Batal",
     "Comment": "Komentar",
     "Complete your profile": "Lengkapi profil Anda",
@@ -40,6 +41,8 @@
     "Member discussion": "Diskusi anggota",
     "Name": "Nama",
     "Neurosurgeon": "Ahli Bedah Saraf",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Satu jam yang lalu",
     "One min ago": "Satu menit yang lalu",
