--- a/ghost/i18n/locales/it/comments.json
+++ b/ghost/i18n/locales/it/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Iscriviti a {{publication}} per poter commentare.",
     "Become a paid member of {{publication}} to start commenting.": "Abbonati a {{publication}} per poter commentare.",
+    "Best": "",
     "Cancel": "Annulla",
     "Comment": "Commenta",
     "Complete your profile": "Completa il tuo profilo",
@@ -40,6 +41,8 @@
     "Member discussion": "Commenti",
     "Name": "Nome",
     "Neurosurgeon": "Neurochirurgo",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Una volta cancellato, non potrai più recuperare questo commento",
     "One hour ago": "Un'ora fa",
     "One min ago": "Un minuto fa",
