--- a/ghost/i18n/locales/ja/comments.json
+++ b/ghost/i18n/locales/ja/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "{{publication}}のメンバーになってコメントを始めましょう。",
     "Become a paid member of {{publication}} to start commenting.": "{{publication}}の有料メンバーになってコメントを始めましょう。",
+    "Best": "",
     "Cancel": "キャンセル",
     "Comment": "コメント",
     "Complete your profile": "プロフィールを完成させる",
@@ -40,6 +41,8 @@
     "Member discussion": "メンバーによる議論",
     "Name": "名前",
     "Neurosurgeon": "脳神経外科医",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "1時間前",
     "One min ago": "1分前",
