--- a/ghost/i18n/locales/lt/comments.json
+++ b/ghost/i18n/locales/lt/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Užsiregistruokite {{publication}}, kad galėtumėte komentuoti.",
     "Become a paid member of {{publication}} to start commenting.": "Tapkite {{publication}} prenumeratoriumi, kad galėtumėte komentuoti.",
+    "Best": "",
     "Cancel": "Atšaukti",
     "Comment": "Komentuoti",
     "Complete your profile": "Pabaikite kurti savo profilį!",
@@ -40,6 +41,8 @@
     "Member discussion": "Komentarai",
     "Name": "Vardas",
     "Neurosurgeon": "Neurochirurgas",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Prieš valandą",
     "One min ago": "Prieš minutę",
