--- a/ghost/i18n/locales/lv/comments.json
+++ b/ghost/i18n/locales/lv/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Vai esat pārliecināts?",
     "Become a member of {{publication}} to start commenting.": "Kļūstiet par {{publication}} dalībnieku, lai sāktu komentēt.",
     "Become a paid member of {{publication}} to start commenting.": "Kļūstiet par apmaksātu {{publication}} dalībnieku, lai sāktu komentēt.",
+    "Best": "",
     "Cancel": "Atcelt",
     "Comment": "Komentēt",
     "Complete your profile": "Pabeidziet savu profilu",
@@ -40,6 +41,8 @@
     "Member discussion": "Biedru diskusija",
     "Name": "Vārds",
     "Neurosurgeon": "Neiroķirurgs",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Pēc dzēšanas šo komentāru nevar atgūt.",
     "One hour ago": "Pirms stundas",
     "One min ago": "Pirms minūtes",
