--- a/ghost/i18n/locales/mk/comments.json
+++ b/ghost/i18n/locales/mk/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Станете член на {{publication}} за да можете да коментирате.",
     "Become a paid member of {{publication}} to start commenting.": "Станете претплатен член на {{publication}} за да можеш да коментирате.",
+    "Best": "",
     "Cancel": "Откажете",
     "Comment": "Коментирајте",
     "Complete your profile": "Комплетирајте го вашиот профил",
@@ -40,6 +41,8 @@
     "Member discussion": "Разговор на членовите",
     "Name": "Име",
     "Neurosurgeon": "Неврохирург",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Пред еден час",
     "One min ago": "",
