--- a/ghost/i18n/locales/nb/comments.json
+++ b/ghost/i18n/locales/nb/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Er du sikker?",
     "Become a member of {{publication}} to start commenting.": "Bli medlem av {{publication}} for å begynne å kommentere.",
     "Become a paid member of {{publication}} to start commenting.": "Bli et betalende medlem av {{publication}} for å begynne å kommentere.",
+    "Best": "",
     "Cancel": "Avbryt",
     "Comment": "Kommentar",
     "Complete your profile": "Fullfør profilen din",
@@ -40,6 +41,8 @@
     "Member discussion": "Medlemsdiskusjon",
     "Name": "Navn",
     "Neurosurgeon": "Nevrokirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "En time siden",
     "One min ago": "Ett minutt siden",
