--- a/ghost/i18n/locales/ne/comments.json
+++ b/ghost/i18n/locales/ne/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "के तपाईं निश्चित हुनुहुन्छ?",
     "Become a member of {{publication}} to start commenting.": "प्रतिक्रिया सुरु गर्न {{publication}} को सदस्य बन्नुहोस्।",
     "Become a paid member of {{publication}} to start commenting.": "प्रतिक्रिया सुरु गर्न {{publication}} को सशुल्क सदस्य बन्नुहोस्।",
+    "Best": "",
     "Cancel": "रद्द गर्नुहोस्",
     "Comment": "प्रतिक्रिया",
     "Complete your profile": "आफ्नो प्रोफाइल पूरा गर्नुहोस्",
@@ -40,6 +41,8 @@
     "Member discussion": "सदस्य छलफल",
     "Name": "नाम",
     "Neurosurgeon": "न्यूरोसर्जन",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "एक पटक मेटाइएपछि, यो प्रतिक्रिया पुन: प्राप्त गर्न सकिँदैन।",
     "One hour ago": "एक घण्टा अघि",
     "One min ago": "एक मिनेट अघि",
