--- a/ghost/i18n/locales/nl/comments.json
+++ b/ghost/i18n/locales/nl/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Weet je het zeker?",
     "Become a member of {{publication}} to start commenting.": "Word lid van {{publication}} om te kunnen reageren.",
     "Become a paid member of {{publication}} to start commenting.": "Word betalend lid van {{publication}} om te kunnen reageren.",
+    "Best": "",
     "Cancel": "Annuleren",
     "Comment": "Verstuur",
     "Complete your profile": "Vervolledig jouw profiel",
@@ -40,6 +41,8 @@
     "Member discussion": "Gesprek",
     "Name": "Naam",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Eenmaal verwijderd, kan deze reactie niet meer worden hersteld.",
     "One hour ago": "Eén uur geleden",
     "One min ago": "Eén min geleden",
