--- a/ghost/i18n/locales/pl/comments.json
+++ b/ghost/i18n/locales/pl/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Dołącz do społeczności {{publication}}, by zacząć komentować.",
     "Become a paid member of {{publication}} to start commenting.": "Dołącz do płatnej społeczności {{publication}}, by zacząć komentować.",
+    "Best": "",
     "Cancel": "Anuluj",
     "Comment": "Skomentuj",
     "Complete your profile": "Skompletuj Twój profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Członek dyskusji",
     "Name": "Imię",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Godzinę temu",
     "One min ago": "Minutę temu",
