--- a/ghost/i18n/locales/pt-BR/comments.json
+++ b/ghost/i18n/locales/pt-BR/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Você tem certeza?",
     "Become a member of {{publication}} to start commenting.": "Torne-se um membro de {{publication}} para começar a comentar.",
     "Become a paid member of {{publication}} to start commenting.": "Torne-se um membro pago de {{publication}} para começar a comentar.",
+    "Best": "",
     "Cancel": "Cancelar",
     "Comment": "Comentar",
     "Complete your profile": "Complete seu perfil",
@@ -40,6 +41,8 @@
     "Member discussion": "Discussão entre membros",
     "Name": "Nome",
     "Neurosurgeon": "Neurocirurgião",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Após ser excluído, esse comentário não poderá ser recuperado.",
     "One hour ago": "Uma hora atrás",
     "One min ago": "Um minuto atrás",
