--- a/ghost/i18n/locales/pt/comments.json
+++ b/ghost/i18n/locales/pt/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Torne-se um membro do {{publication}} para comentar.",
     "Become a paid member of {{publication}} to start commenting.": "Torne-se um membro pago do {{publication}} para comentar. ",
+    "Best": "",
     "Cancel": "Cancelar",
     "Comment": "Comentar",
     "Complete your profile": "Complete o seu perfil",
@@ -40,6 +41,8 @@
     "Member discussion": "Discussão para membros",
     "Name": "Nome",
     "Neurosurgeon": "neurocirurgião",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "uma hora atrás",
     "One min ago": "um minuto atrás",
