--- a/ghost/i18n/locales/ru/comments.json
+++ b/ghost/i18n/locales/ru/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Вы уверены?",
     "Become a member of {{publication}} to start commenting.": "Присоединяйтесь к {{publication}} чтобы начать комментировать.",
     "Become a paid member of {{publication}} to start commenting.": "Станьте платным участником {{publication}} чтобы начать комментировать.",
+    "Best": "",
     "Cancel": "Отмена",
     "Comment": "Комментарий",
     "Complete your profile": "Заполните свой профиль",
@@ -40,6 +41,8 @@
     "Member discussion": "Обсуждение участников",
     "Name": "Имя",
     "Neurosurgeon": "Нейрохирург",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "После удаления этот комментарий не может быть восстановлен.",
     "One hour ago": "Час назад",
     "One min ago": "Минуту назад",
