--- a/ghost/i18n/locales/sk/comments.json
+++ b/ghost/i18n/locales/sk/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Ste si istý?",
     "Become a member of {{publication}} to start commenting.": "Staňte sa členom {{publication}}, aby ste mohli začať komentovať",
     "Become a paid member of {{publication}} to start commenting.": "Staňte sa plateným členom {{publication}}, aby ste mohli začať komentovať",
+    "Best": "",
     "Cancel": "Zrušiť",
     "Comment": "Komentár",
     "Complete your profile": "Dokončite váš profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Členská diskusia",
     "Name": "Meno",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Po odstránení nebude možné tento komentár obnoviť.",
     "One hour ago": "Pred hodinou",
     "One min ago": "Pred minútou",
