--- a/ghost/i18n/locales/sl/comments.json
+++ b/ghost/i18n/locales/sl/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Ste prepričani?",
     "Become a member of {{publication}} to start commenting.": "Postanite član {{publication}}, da lahko začnete komentirati.",
     "Become a paid member of {{publication}} to start commenting.": "Postanite plačljiv član {{publication}}, da lahko začnete komentirati.",
+    "Best": "",
     "Cancel": "Prekliči",
     "Comment": "Komentiraj",
     "Complete your profile": "Dokončajte svoj profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Razprava članov",
     "Name": "Ime",
     "Neurosurgeon": "Nevrokirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Ko je komentar izbrisan, ga ni mogoče več obnoviti.",
     "One hour ago": "Pred eno uro",
     "One min ago": "Pred eno minuto",
