--- a/ghost/i18n/locales/sr-Cyrl/comments.json
+++ b/ghost/i18n/locales/sr-Cyrl/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Постаните члан {{publication}} да бисте почели са коментарисањем.",
     "Become a paid member of {{publication}} to start commenting.": "Постаните плаћени члан {{publication}} да бисте почели са коментарисањем.",
+    "Best": "",
     "Cancel": "Откажи",
     "Comment": "Коментар",
     "Complete your profile": "Попуните свој профил",
@@ -40,6 +41,8 @@
     "Member discussion": "Дискусија чланова",
     "Name": "Име",
     "Neurosurgeon": "Неурохирург",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Пре један сат",
     "One min ago": "",
