--- a/ghost/i18n/locales/sv/comments.json
+++ b/ghost/i18n/locales/sv/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Registrera dig på {{publication}} för att börja kommentera.",
     "Become a paid member of {{publication}} to start commenting.": "Bli betalande medlem på {{publication}} för att börja kommentera ",
+    "Best": "",
     "Cancel": "Avbryt",
     "Comment": "Kommentar",
     "Complete your profile": "Fyll i hela din profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Medlemsdiskussion",
     "Name": "Namn",
     "Neurosurgeon": "Neurokirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "En timme sedan",
     "One min ago": "En minut sedan",
