--- a/ghost/i18n/locales/th/comments.json
+++ b/ghost/i18n/locales/th/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "เป็นสมาชิกของ {{publication}} เพื่อเริ่มแสดงความคิดเห็น",
     "Become a paid member of {{publication}} to start commenting.": "เป็นสมาชิกแบบชำระเงินของ {{publication}} เพื่อเริ่มแสดงความคิดเห็น",
+    "Best": "",
     "Cancel": "ยกเลิก",
     "Comment": "ความคิดเห็น",
     "Complete your profile": "กรอกโปรไฟล์ของคุณให้สมบูรณ์",
@@ -40,6 +41,8 @@
     "Member discussion": "การสนทนาของสมาชิก",
     "Name": "ชื่อ",
     "Neurosurgeon": "ศัลยแพทย์ระบบประสาท",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "1 ชั่วโมงที่แล้ว",
     "One min ago": "",
