--- a/ghost/i18n/locales/af/comments.json
+++ b/ghost/i18n/locales/af/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Word 'n lid van {{publication}} om kommentaar te lewer.",
     "Become a paid member of {{publication}} to start commenting.": "Word 'n betaalde lid van {{publication}} om kommentaar te lewer.",
+    "Best": "",
     "Cancel": "Kanselleer",
     "Comment": "Kommentaar",
     "Complete your profile": "Voltooi jou profiel",
@@ -40,6 +41,8 @@
     "Member discussion": "Lidmaat bespreking",
     "Name": "Naam",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Een uur gelede",
     "One min ago": "Een minuut gelede",
