--- a/ghost/i18n/locales/ar/comments.json
+++ b/ghost/i18n/locales/ar/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "يجب أن تصبح عضوًا فى {{publication}}  لتستطيع التعليق",
     "Become a paid member of {{publication}} to start commenting.": "يجب ان تكون عضويتك مدفوعة فى {{publication}} لكي تستطيع التعليق",
+    "Best": "",
     "Cancel": "إلغاء",
     "Comment": "تعليق",
     "Complete your profile": "إكمال ملفك الشخصى",
@@ -40,6 +41,8 @@
     "Member discussion": "مناقشة الاعضاء",
     "Name": "الاسم",
     "Neurosurgeon": "جراح المخ و الاعصاب",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "منذ ساعة واحدة",
     "One min ago": " منذ دقيقة واحدة",
