--- a/ghost/i18n/locales/bg/comments.json
+++ b/ghost/i18n/locales/bg/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Убедени ли сте?",
     "Become a member of {{publication}} to start commenting.": "Абонирайте се за {{publication}}, за да коментирате.",
     "Become a paid member of {{publication}} to start commenting.": "Станете плащащ абонат на {{publication}}, за да коментирате.",
+    "Best": "",
     "Cancel": "Отказ",
     "Comment": "Коментар",
     "Complete your profile": "Попълнете профила си",
@@ -40,6 +41,8 @@
     "Member discussion": "Дискусия за абонатите",
     "Name": "Име",
     "Neurosurgeon": "Неврохирург",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Веднъж изтрит, коментарът не може да бъде възстановен.",
     "One hour ago": "Преди час",
     "One min ago": "Преди минута",
