--- a/ghost/i18n/locales/bn/comments.json
+++ b/ghost/i18n/locales/bn/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "{{publication}} এর সদস্য হন মন্তব্য করার জন্য।",
     "Become a paid member of {{publication}} to start commenting.": "{{publication}} এর পেইড সদস্য হন মন্তব্য করার জন্য।",
+    "Best": "",
     "Cancel": "বাতিল করুন",
     "Comment": "মন্তব্য",
     "Complete your profile": "আপনার প্রোফাইল সম্পূর্ণ করুন",
@@ -40,6 +41,8 @@
     "Member discussion": "সদস্য আলোচনা",
     "Name": "নাম",
     "Neurosurgeon": "নিউরোসার্জন",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "এক ঘণ্টা পূর্বে",
     "One min ago": "",
