--- a/ghost/i18n/locales/de-CH/comments.json
+++ b/ghost/i18n/locales/de-CH/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Sind Sie sicher?",
     "Become a member of {{publication}} to start commenting.": "Werden Sie ein Mitglied bei {{publication}}, um Kommentare zu schreiben.",
     "Become a paid member of {{publication}} to start commenting.": "Werden Sie ein zahlendes Mitglied bei {{publication}}, um Kommentare zu schreiben.",
+    "Best": "",
     "Cancel": "Abbrechen",
     "Comment": "Kommentar",
     "Complete your profile": "Vervollständigen Sie Ihr Profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Mitgliederdiskussion",
     "Name": "Name",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Der Kommentar kann nicht wiederhergestellt werden, wenn er gelöscht wurde.",
     "One hour ago": "Vor einer Stunde",
     "One min ago": "Vor einer Minute",
