--- a/ghost/i18n/locales/es/comments.json
+++ b/ghost/i18n/locales/es/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Hazte miembro de {{publication}} para poder comentar.",
     "Become a paid member of {{publication}} to start commenting.": "Hazte miembro de pago para poder comentar en {{publication}}.",
+    "Best": "",
     "Cancel": "Cancelar",
     "Comment": "Comentar",
     "Complete your profile": "Completa tu perfil",
@@ -40,6 +41,8 @@
     "Member discussion": "Discusión de miembros",
     "Name": "Nombre",
     "Neurosurgeon": "Neurocirujano",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Hace una hora",
     "One min ago": "Hace un minuto",
