--- a/ghost/i18n/locales/et/comments.json
+++ b/ghost/i18n/locales/et/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Kommenteerimise alustamiseks saage {{publication}} liikmeks.",
     "Become a paid member of {{publication}} to start commenting.": "Kommenteerimise alustamiseks saage {{publication}} tasuliseks liikmeks.",
+    "Best": "",
     "Cancel": "Tühista",
     "Comment": "Kommentaar",
     "Complete your profile": "Täida oma profiil",
@@ -40,6 +41,8 @@
     "Member discussion": "Liikmete arutelu",
     "Name": "Nimi",
     "Neurosurgeon": "Neurokirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Üks tund tagasi",
     "One min ago": "Üks minut tagasi",
