--- a/ghost/i18n/locales/fa/comments.json
+++ b/ghost/i18n/locales/fa/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "عضو وب\u200cسایت {{publication}} شوید تا مجوز ارسال دیدگاه دریافت کنید.",
     "Become a paid member of {{publication}} to start commenting.": "حق اشتراک وب\u200cسایت {{publication}} را پرداخت کنید تا مجوز ارسال دیدگاه دریافت کنید.",
+    "Best": "",
     "Cancel": "انصراف",
     "Comment": "دیدگاه",
     "Complete your profile": "نمایه خود را کامل کنید",
@@ -40,6 +41,8 @@
     "Member discussion": "گفتمان کاربران",
     "Name": "نام",
     "Neurosurgeon": "جراح مغز و اعصاب",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "یک ساعت پیش",
     "One min ago": "یک دقیقه پیش",
