--- a/ghost/i18n/locales/fi/comments.json
+++ b/ghost/i18n/locales/fi/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Ala {{publication}} jäseneksi pystyäksesi kommentoimaan",
     "Become a paid member of {{publication}} to start commenting.": "Ota maksullinen jäsenyys sivulle {{publication}}, jotta pystyt kommentoimaan",
+    "Best": "",
     "Cancel": "Peruuta",
     "Comment": "Kommentti",
     "Complete your profile": "Täydennä profiilisi",
@@ -40,6 +41,8 @@
     "Member discussion": "Jäsenten keskustelu",
     "Name": "Nimi",
     "Neurosurgeon": "Neurokirurgi",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Tunti sitten",
     "One min ago": "Minuutti sitten",
