--- a/ghost/i18n/locales/fr/comments.json
+++ b/ghost/i18n/locales/fr/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Abonnez-vous gratuitement à {{publication}} pour commencer à commenter.",
     "Become a paid member of {{publication}} to start commenting.": "Choisissez un abonnement payant à {{publication}} pour commencer à commenter.",
+    "Best": "",
     "Cancel": "Annuler",
     "Comment": "Commentaire",
     "Complete your profile": "Complétez votre profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Discussion entre abonnés",
     "Name": "Nom",
     "Neurosurgeon": "Neurochirurgien",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Il y a une heure",
     "One min ago": "Il y a une minute",
