--- a/ghost/i18n/locales/hi/comments.json
+++ b/ghost/i18n/locales/hi/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "टिप्पणी शुरू करने के लिए {{publication}} का सदस्य बनें।",
     "Become a paid member of {{publication}} to start commenting.": "टिप्पणी शुरू करने के लिए {{publication}} के भुगतान सदस्य बनें।",
+    "Best": "",
     "Cancel": "रद्द करें",
     "Comment": "टिप्पणी",
     "Complete your profile": "अपनी प्रोफ़ाइल पूरी करें",
@@ -40,6 +41,8 @@
     "Member discussion": "सदस्य चर्चा",
     "Name": "नाम",
     "Neurosurgeon": "न्यूरोसर्जन",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "एक घंटा पहले",
     "One min ago": "",
