--- a/ghost/i18n/locales/hr/comments.json
+++ b/ghost/i18n/locales/hr/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Postani član {{publication}} za mogućnost komentiranja.",
     "Become a paid member of {{publication}} to start commenting.": "Plati pretplatu na {{publication}} za mogućnost komentiranja.",
+    "Best": "",
     "Cancel": "Prekini",
     "Comment": "Komentar",
     "Complete your profile": "Dovrši svoj profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Rasprava članova",
     "Name": "Ime",
     "Neurosurgeon": "Neurokirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Prije jednog sata",
     "One min ago": "Prije jedne minute",
