--- a/ghost/i18n/locales/ko/comments.json
+++ b/ghost/i18n/locales/ko/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "{{publication}}의 회원이 되어 댓글을 작성해 주세요.",
     "Become a paid member of {{publication}} to start commenting.": "{{publication}}의 유료 회원이 되어 댓글을 작성해 주세요.",
+    "Best": "",
     "Cancel": "취소",
     "Comment": "댓글",
     "Complete your profile": "프로필을 완성해 주세요",
@@ -40,6 +41,8 @@
     "Member discussion": "회원들의 댓글",
     "Name": "이름",
     "Neurosurgeon": "신경외과 의사",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "1시간 전",
     "One min ago": "1분 전",
