--- a/ghost/i18n/locales/kz/comments.json
+++ b/ghost/i18n/locales/kz/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Пікір қалдыру үшін {{publication}} сайтына аккаунт қажет.",
     "Become a paid member of {{publication}} to start commenting.": "Пікір қалдыру үшін {{publication}} сайтына ақылы аккаунт қажет.",
+    "Best": "",
     "Cancel": "Бас тарту",
     "Comment": "Пікір",
     "Complete your profile": "Профиліңізді толтырыңыз",
@@ -40,6 +41,8 @@
     "Member discussion": "Мүшелер талқысы",
     "Name": "Есімі",
     "Neurosurgeon": "Нейрохирург",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Бір сағат бұрын",
     "One min ago": "Бір минут бұрын",
