--- a/ghost/i18n/locales/mn/comments.json
+++ b/ghost/i18n/locales/mn/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Та итгэлтэй байна уу?",
     "Become a member of {{publication}} to start commenting.": "Сэтгэгдэл бичихийн тулд {{publication}}-н гишүүн болно уу.",
     "Become a paid member of {{publication}} to start commenting.": "Сэтгэгдэл бичихийн тулд {{publication}}-н төлбөртэй гишүүн болно уу.",
+    "Best": "",
     "Cancel": "Цуцлах",
     "Comment": "Сэтгэгдэл",
     "Complete your profile": "Профайлаа бүрэн бөглөнө үү",
@@ -40,6 +41,8 @@
     "Member discussion": "Гишүүдийн хэлэлцүүлэг",
     "Name": "Нэр",
     "Neurosurgeon": "Мэдрэлийн мэс засалч",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Устгасны дараа энэ сэтгэгдлийг сэргээх боломжгүй.",
     "One hour ago": "Нэг цагийн өмнө",
     "One min ago": "Нэг минутын өмнө",
