--- a/ghost/i18n/locales/ro/comments.json
+++ b/ghost/i18n/locales/ro/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Deveniți membru al {{publication}} pentru a începe să comentați.",
     "Become a paid member of {{publication}} to start commenting.": "Deveniți membru plătit al {{publication}} pentru a începe să comentați.",
+    "Best": "",
     "Cancel": "Anulează",
     "Comment": "Comentează",
     "Complete your profile": "Completează-ți profilul",
@@ -40,6 +41,8 @@
     "Member discussion": "Discuție membrii",
     "Name": "Nume",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Acum o oră",
     "One min ago": "Acum un minut",
