--- a/ghost/i18n/locales/si/comments.json
+++ b/ghost/i18n/locales/si/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "අදහස් දැක්වීම ආරම්භ කිරීමට {{publication}} හි සාමාජිකයෙකු වන්න",
     "Become a paid member of {{publication}} to start commenting.": "අදහස් දැක්වීම ආරම්භ කිරීමට {{publication}} හි ගෙවීම් කරන ල\u200bද සාමාජිකයෙකු වන්න",
+    "Best": "",
     "Cancel": "අවලංගු කරන්\u200bන\u200b",
     "Comment": "අදහ\u200bස",
     "Complete your profile": "ඔබගේ ගිණුම සම්පූර්ණ කරන්\u200bන",
@@ -40,6 +41,8 @@
     "Member discussion": "සාමාජික සාකච්ඡාව",
     "Name": "න\u200bම",
     "Neurosurgeon": "ස්නායු ශ\u200bල්\u200dය වෛ\u200bද්\u200dය",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "පැයකට පෙ\u200bර",
     "One min ago": "මිනිත්තුවකට පෙ\u200bර",
