--- a/ghost/i18n/locales/sq/comments.json
+++ b/ghost/i18n/locales/sq/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "",
     "Become a paid member of {{publication}} to start commenting.": "",
+    "Best": "",
     "Cancel": "",
     "Comment": "",
     "Complete your profile": "",
@@ -40,6 +41,8 @@
     "Member discussion": "",
     "Name": "",
     "Neurosurgeon": "",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "",
     "One min ago": "",
