--- a/ghost/i18n/locales/sw/comments.json
+++ b/ghost/i18n/locales/sw/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Jiunge kama mwanachama wa {{publication}} ili kuanza kutoa maoni.",
     "Become a paid member of {{publication}} to start commenting.": "Jiunge kama mwanachama anayelipa wa {{publication}} ili kuanza kutoa maoni.",
+    "Best": "",
     "Cancel": "Ghairi",
     "Comment": "Maoni",
     "Complete your profile": "Kamilisha wasifu wako",
@@ -40,6 +41,8 @@
     "Member discussion": "Mjadala wa wanachama",
     "Name": "Jina",
     "Neurosurgeon": "Daktari wa ubongo",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Saa moja iliyopita",
     "One min ago": "",
