--- a/ghost/i18n/locales/ta/comments.json
+++ b/ghost/i18n/locales/ta/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "கருத்துத் தெரிவிக்க {{publication}} இல் உறுப்பினராகுங்கள்.",
     "Become a paid member of {{publication}} to start commenting.": "கருத்துத் தெரிவிக்க {{publication}} இல் கட்டண உறுப்பினராகுங்கள்.",
+    "Best": "",
     "Cancel": "ரத்து செய்",
     "Comment": "கருத்து",
     "Complete your profile": "உங்கள் சுயவிவரத்தை பூர்த்தி செய்யவும்",
@@ -40,6 +41,8 @@
     "Member discussion": "உறுப்பினர் கருத்து",
     "Name": "பெயர்",
     "Neurosurgeon": "நரம்பியல் அறுவை சிகிச்சை நிபுணர்",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "ஒரு மணி முன்பு",
     "One min ago": "ஒரு நிமிடம் முன்பு",
