--- a/ghost/i18n/locales/tr/comments.json
+++ b/ghost/i18n/locales/tr/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Emin misin?",
     "Become a member of {{publication}} to start commenting.": "Yorum yapmaya başlamak için {{publication}} sitesinde hesap oluşturun.",
     "Become a paid member of {{publication}} to start commenting.": "Yorum yapmaya başlamak için {{publication}} sitesinde ücretli hesap oluşturun.",
+    "Best": "",
     "Cancel": "İptal et",
     "Comment": "Yorum ekle",
     "Complete your profile": "Profilinizi tamamlayın",
@@ -40,6 +41,8 @@
     "Member discussion": "Üye tartışması",
     "Name": "Ad",
     "Neurosurgeon": "Beyin cerrahı",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Bu yorum silindikten sonra kurtarılamaz.",
     "One hour ago": "Bir saat önce",
     "One min ago": "Bir dakika önce",
