--- a/ghost/i18n/locales/uk/comments.json
+++ b/ghost/i18n/locales/uk/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "Станьте учасником {{publication}} щоб почати коментувати.",
     "Become a paid member of {{publication}} to start commenting.": "Станьте платним учасником {{publication}} щоб почати коментувати.",
+    "Best": "",
     "Cancel": "Відмінити",
     "Comment": "Коментувати",
     "Complete your profile": "Заповніть свій профіль",
@@ -40,6 +41,8 @@
     "Member discussion": "Обговорення учасників",
     "Name": "Імʼя",
     "Neurosurgeon": "Нейрохірург",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "Одну годину тому",
     "One min ago": "Одну хвилину тому",
