--- a/ghost/i18n/locales/ur/comments.json
+++ b/ghost/i18n/locales/ur/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "تبادلہ شروع کرنے کے لئے {{publication}} کا رکن بنیں۔",
     "Become a paid member of {{publication}} to start commenting.": "تبادلہ شروع کرنے کے لئے {{publication}} کا ادائیگی رکن بنیں۔",
+    "Best": "",
     "Cancel": "منسوخ کریں",
     "Comment": "تبادلہ",
     "Complete your profile": "اپنا پروفائل مکمل کریں",
@@ -40,6 +41,8 @@
     "Member discussion": "رکن کا تبادلہ",
     "Name": "نام",
     "Neurosurgeon": "نیوروسرجن",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "ایک گھنٹہ پہلے",
     "One min ago": "",
