--- a/ghost/i18n/locales/vi/comments.json
+++ b/ghost/i18n/locales/vi/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Bạn có chắc không?",
     "Become a member of {{publication}} to start commenting.": "Trở thành thành viên của {{publication}} để có thể bình luận.",
     "Become a paid member of {{publication}} to start commenting.": "Trở thành thành viên trả phí của {{publication}} để có thể bình luận.",
+    "Best": "",
     "Cancel": "Hủy",
     "Comment": "Bình luận",
     "Complete your profile": "Hoàn tất hồ sơ của bạn",
@@ -40,6 +41,8 @@
     "Member discussion": "Thảo luận của thành viên",
     "Name": "Tên",
     "Neurosurgeon": "Bác sĩ phẫu thuật thần kinh",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "Một khi đã xóa, bình luận này không thể khôi phục.",
     "One hour ago": "Một giờ trước",
     "One min ago": "Một phút trước",
