--- a/ghost/i18n/locales/zh-Hant/comments.json
+++ b/ghost/i18n/locales/zh-Hant/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "確認？",
     "Become a member of {{publication}} to start commenting.": "成為{{publication}}的會員以開始留言。",
     "Become a paid member of {{publication}} to start commenting.": "成為{{publication}}的付費會員以開始留言。",
+    "Best": "",
     "Cancel": "取消",
     "Comment": "留言",
     "Complete your profile": "完善您的註冊資訊",
@@ -40,6 +41,8 @@
     "Member discussion": "會員討論",
     "Name": "稱呼",
     "Neurosurgeon": "神經外科醫生",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "此留言一經刪除後將無法復原。",
     "One hour ago": "一小時前",
     "One min ago": "一分鐘前",
