--- a/ghost/i18n/locales/zh/comments.json
+++ b/ghost/i18n/locales/zh/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "",
     "Become a member of {{publication}} to start commenting.": "成为{{publication}}的会员以开始评论。",
     "Become a paid member of {{publication}} to start commenting.": "成为{{publication}}的付费会员以开始评论。",
+    "Best": "",
     "Cancel": "取消",
     "Comment": "评论",
     "Complete your profile": "完善您的注册信息",
@@ -40,6 +41,8 @@
     "Member discussion": "会员讨论",
     "Name": "称呼",
     "Neurosurgeon": "神经外科医生",
+    "Newest": "",
+    "Oldest": "",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "一小时前",
     "One min ago": "一分钟前",
