--- a/ghost/i18n/locales/ru/comments.json
+++ b/ghost/i18n/locales/ru/comments.json
@@ -1,8 +1,8 @@
 {
     "{{amount}} characters left": "{{amount}} символа(ов) осталось",
     "{{amount}} comments": "{{amount}} комментария(ев)",
-    "{{amount}} hrs ago": "{{amount}} часа(ов) назад",
-    "{{amount}} mins ago": "{{amount}} минут(ы) назад",
+    "{{amount}} hrs ago": "{{amount}} ч. назад",
+    "{{amount}} mins ago": "{{amount}} мин. назад",
     "{{amount}} more": "ещё {{amount}}",
     "1 comment": "1 комментарий",
     "Add comment": "Добавить комментарий",
@@ -13,7 +13,7 @@
     "Are you sure?": "Вы уверены?",
     "Become a member of {{publication}} to start commenting.": "Присоединяйтесь к {{publication}} чтобы начать комментировать.",
     "Become a paid member of {{publication}} to start commenting.": "Станьте платным участником {{publication}} чтобы начать комментировать.",
-    "Best": "",
+    "Best": "Лучший",
     "Cancel": "Отмена",
     "Comment": "Комментарий",
     "Complete your profile": "Заполните свой профиль",
@@ -41,8 +41,8 @@
     "Member discussion": "Обсуждение участников",
     "Name": "Имя",
     "Neurosurgeon": "Нейрохирург",
-    "Newest": "",
-    "Oldest": "",
+    "Newest": "Сначала новые",
+    "Oldest": "Сначала старые",
     "Once deleted, this comment can’t be recovered.": "После удаления этот комментарий не может быть восстановлен.",
     "One hour ago": "Час назад",
     "One min ago": "Минуту назад",
@@ -67,7 +67,7 @@
     "Start the conversation": "Начать обсуждение",
     "This comment has been hidden.": "Этот комментарий скрыт",
     "This comment has been removed.": "Этот комментарий был удалён",
-    "Upgrade now": "Обновить ",
+    "Upgrade now": "Обновить",
     "Yesterday": "Вчера",
     "Your request will be sent to the owner of this site.": "Ваш запрос будет отправлен владельцу сайта."
 }
