--- a/ghost/i18n/locales/ru/ghost.json
+++ b/ghost/i18n/locales/ru/ghost.json
@@ -7,7 +7,7 @@
     "Confirm your email address": "Подтвердите ваш email адрес",
     "Confirm your email update for {{siteTitle}}!": "Подтвердите обновление вашего email адреса на {{siteTitle}}!",
     "Confirm your subscription to {{siteTitle}}": "Подтвердите подписку на {{siteTitle}}",
-    "Device:": "Устройство",
+    "Device:": "Устройство:",
     "For security verification, enter the code below to sign in to {{siteTitle}}:": "Для проверки безопасности введите приведенный ниже код для входа на {{siteTitle}}:",
     "For your security, the link will expire in 24 hours time.": "В целях вашей безопасности ссылка действительна в течение 24 часов.",
     "Here's your code to login to {{siteTitle}}": "Вот ваш код для входа на {{siteTitle}}",
@@ -31,8 +31,8 @@
     "This email address will not be used.": "Этот email адрес не будет использоваться.",
     "Welcome back to {{siteTitle}}!": "Добро пожаловать на {{siteTitle}}, с возвращением!",
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "С возвращением! Используйте эту ссылку для безопасного входа в свою учётную запись на {{siteTitle}}:",
-    "When:": "Когда",
-    "Where:": "Где",
+    "When:": "Когда:",
+    "Where:": "Где:",
     "You can also copy & paste this URL into your browser:": "Вы также можете скопировать и вставить этот URL-адрес в свой браузер:",
     "You just tried to access your account from a new device.": "Вы только что попытались получить доступ к своей учётной записи с нового устройства.",
     "You will not be signed up, and no account will be created for you.": "Вы не будете зарегистрированы, и для вас не будет создана учётная запись.",
