More laconic translation

--- a/ghost/i18n/locales/ru/portal.json
+++ b/ghost/i18n/locales/ru/portal.json
@@ -104,8 +104,8 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Убедитесь, что письма случайно не попадают в папки «Спам» или «Промоакции» вашего почтового ящика. Если это так, нажмите «Не спам!» и/или «Отметить как не спам» и/или «Переместить во входящие».",
     "Manage": "Управление",
     "Maybe later": "Может быть позже",
-    "Memberships from this email domain are currently restricted.": "В настоящее время количество подписчиков с этого домена электронной почты ограничено.",
-    "Memberships unavailable, contact the owner for access.": "Подписка недоступна, свяжитесь с владельцем сайта для получения доступа.",
+    "Memberships from this email domain are currently restricted.": "В настоящее время для этого домена электронной подписки недоступны.",
+    "Memberships unavailable, contact the owner for access.": "Подписки недоступны, свяжитесь с владельцем сайта для получения доступа.",
     "month": "месяц",
     "Monthly": "Ежемесячно",
     "More like this": "Больше подобного",
