Uniform translation of the word "upgrade"

--- a/ghost/i18n/locales/ru/comments.json
+++ b/ghost/i18n/locales/ru/comments.json
@@ -67,7 +67,7 @@
     "Start the conversation": "Начать обсуждение",
     "This comment has been hidden.": "Этот комментарий скрыт",
     "This comment has been removed.": "Этот комментарий был удалён",
-    "Upgrade now": "Обновить",
+    "Upgrade now": "Улучшить подписку",
     "Yesterday": "Вчера",
     "Your request will be sent to the owner of this site.": "Ваш запрос будет отправлен владельцу сайта."
 }
