--- a/ghost/i18n/locales/pa/comments.json
+++ b/ghost/i18n/locales/pa/comments.json
@@ -29,7 +29,7 @@
     "Enter your name": "ਆਪਣਾ ਨਾਮ ਦਰਜ ਕਰੋ",
     "Expertise": "ਮੁਹਾਰਤ",
     "Founder @ Acme Inc": "ਸੰਸਥਾਪਕ @ ਫਲਾਣੀ ਕੰਪਨੀ",
-    "Full-time parent": "ਬੱਚਿਆਂ ਦੀ ਦੇਖਭਾਲ",
+    "Full-time parent": "ਘਰੇਲੂ ਮਾਪਾ",
     "Head of Marketing at Acme, Inc": "ਮਾਰਕੀਟਿੰਗ ਮੁਖੀ, ਫਲਾਣੀ ਕੰਪਨੀ ਵਿਖੇ",
     "Hidden for members": "ਮੈਂਬਰਾਂ ਲਈ ਛੁਪਾਇਆ ਗਿਆ",
     "Hide": "ਛੁਪਾਓ",
@@ -68,7 +68,7 @@
     "Start the conversation": "ਗੱਲਬਾਤ ਸ਼ੁਰੂ ਕਰੋ",
     "This comment has been hidden.": "ਇਹ ਟਿੱਪਣੀ ਛੁਪਾ ਦਿੱਤੀ ਗਈ ਹੈ।",
     "This comment has been removed.": "ਇਹ ਟਿੱਪਣੀ ਹਟਾ ਦਿੱਤੀ ਗਈ ਹੈ।",
-    "Upgrade now": "ਹੁਣੇ ਅੱਪਗ੍ਰੇਡ ਕਰੋ",
+    "Upgrade now": "ਹੁਣੇ ਅੱਪਗਰੇਡ ਕਰੋ",
     "Yesterday": "ਕੱਲ੍ਹ",
     "Your request will be sent to the owner of this site.": "ਤੁਹਾਡੀ ਬੇਨਤੀ ਇਸ ਸਾਈਟ ਦੇ ਸੰਚਾਲਕ ਨੂੰ ਭੇਜੀ ਜਾਵੇਗੀ।"
 }
