--- a/ghost/i18n/locales/pa/ghost.json
+++ b/ghost/i18n/locales/pa/ghost.json
@@ -8,7 +8,7 @@
     "Confirm your email update for {{siteTitle}}!": "{{siteTitle}} ਲਈ ਆਪਣੇ ਈਮੇਲ ਅੱਪਡੇਟ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ!",
     "Confirm your subscription to {{siteTitle}}": "{{siteTitle}} ਲਈ ਆਪਣੀ ਸਦੱਸਤਾ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
     "Device:": "ਯੰਤਰ:",
-    "For security verification, enter the code below to sign in to {{siteTitle}}:": "ਸੁਰੱਖਿਆ ਤਸਦੀਕ ਲਈ, {{siteTitle}} ਵਿੱਚ ਸਾਈਨ ਇਨ ਕਰਨ ਲਈ ਹੇਠਾਂ ਦਿੱਤਾ ਕੋਡ ਦਾਖਲ ਕਰੋ:",
+    "For security verification, enter the code below to sign in to {{siteTitle}}:": "ਸੁਰੱਖਿਆ ਤਸਦੀਕੀ ਲਈ, {{siteTitle}} ਵਿੱਚ ਸਾਈਨ ਇਨ ਕਰਨ ਲਈ ਹੇਠਾਂ ਦਿੱਤਾ ਕੋਡ ਦਾਖਲ ਕਰੋ:",
     "For your security, the link will expire in 24 hours time.": "ਤੁਹਾਡੀ ਸੁਰੱਖਿਆ ਲਈ, ਲਿੰਕ 24 ਘੰਟਿਆਂ ਵਿੱਚ ਮਿਆਦ ਪੂਰੀ ਕਰ ਜਾਵੇਗਾ।",
     "Here's your code to login to {{siteTitle}}": "{{siteTitle}} ਵਿੱਚ ਲੌਗਇਨ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਕੋਡ ਇਹ ਹੈ",
     "Hey there,": "ਸਤਿ ਸ੍ਰੀ ਅਕਾਲ,",
@@ -22,9 +22,9 @@
     "Sent to {{email}}": "{{email}} ਨੂੰ ਭੇਜਿਆ ਗਿਆ",
     "Sign in": "ਸਾਈਨ ਇਨ ਕਰੋ",
     "Sign in to {{siteTitle}}": "{{siteTitle}} 'ਤੇ ਸਾਈਨ ਇਨ ਕਰੋ",
-    "Sign in verification": "ਸਾਈਨ ਇਨ ਤਸਦੀਕ ਕਰੋ",
+    "Sign in verification": "ਸਾਈਨ ਇਨ ਤਸਦੀਕ",
     "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "{{siteTitle}} ਲਈ ਸਾਈਨ-ਅੱਪ ਪ੍ਰਕਿਰਿਆ ਨੂੰ ਪੂਰਾ ਕਰਨ ਲਈ ਹੇਠਾਂ ਦਿੱਤਾ ਲਿੰਕ ਦਬਾਓ, ਅਤੇ ਸਵੈਚਲਿਤ ਤੌਰ 'ਤੇ ਸਾਈਨ ਇਨ ਹੋ ਜਾਓ:",
-    "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}} 'ਤੇ ਸਾਈਨ ਅੱਪ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
+    "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}} 'ਤੇ ਸਾਈਨ-ਅੱਪ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
     "Thank you for subscribing to {{siteTitle}}!": "{{siteTitle}} ਤੇ ਸਬਸਕ੍ਰਾਈਬ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
     "Thank you for subscribing to {{siteTitle}}.": "{{siteTitle}} ਤੇ ਸਬਸਕ੍ਰਾਈਬ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ।",
     "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "{{siteTitle}} ਤੇ ਸਬਸਕ੍ਰਾਈਬ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ। ਸਵੈਚਲਿਤ ਤੌਰ 'ਤੇ ਸਾਈਨ ਇਨ ਹੋਣ ਲਈ ਹੇਠਾਂ ਦਿੱਤੇ ਲਿੰਕ ਨੂੰ ਦੱਬੋ:",
@@ -33,8 +33,8 @@
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "ਵਾਪਸ ਆਉਣ 'ਤੇ ਸੁਆਗਤ ਹੈ! ਆਪਣੇ {{siteTitle}} ਖਾਤੇ ਵਿੱਚ ਸੁਰੱਖਿਅਤ ਢੰਗ ਨਾਲ ਸਾਈਨ ਇਨ ਕਰਨ ਲਈ ਇਸ ਲਿੰਕ ਦੀ ਵਰਤੋਂ ਕਰੋ:",
     "When:": "ਕਦੋਂ:",
     "Where:": "ਕਿੱਥੇ:",
-    "You can also copy & paste this URL into your browser:": "ਤੁਸੀਂ ਇਸ ਲਿੰਕ (URL) ਨੂੰ ਆਪਣੇ ਬ੍ਰਾਊਜ਼ਰ ਵਿੱਚ ਕਾਪੀ ਅਤੇ ਪੇਸਟ ਵੀ ਕਰ ਸਕਦੇ ਹੋ:",
-    "You just tried to access your account from a new device.": "ਤੁਸੀਂ ਹੁਣੇ ਇੱਕ ਨਵੀਂ ਯੰਤਰ ਤੋਂ ਆਪਣੇ ਖਾਤੇ ਤੱਕ ਪਹੁੰਚਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕੀਤੀ ਹੈ।",
+    "You can also copy & paste this URL into your browser:": "ਤੁਸੀਂ ਇਸ ਲਿੰਕ (URL) ਨੂੰ ਆਪਣੇ ਬਰਾਊਜ਼ਰ ਵਿੱਚ ਕਾਪੀ ਅਤੇ ਪੇਸਟ ਵੀ ਕਰ ਸਕਦੇ ਹੋ:",
+    "You just tried to access your account from a new device.": "ਤੁਸੀਂ ਹੁਣੇ ਇੱਕ ਨਵੇਂ ਯੰਤਰ ਤੋਂ ਆਪਣੇ ਖਾਤੇ ਤੱਕ ਪਹੁੰਚਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕੀਤੀ ਹੈ।",
     "You will not be signed up, and no account will be created for you.": "ਤੁਹਾਡਾ ਸਾਈਨ-ਅੱਪ ਨਹੀਂ ਕੀਤਾ ਜਾਵੇਗਾ, ਅਤੇ ਤੁਹਾਡੇ ਲਈ ਕੋਈ ਖਾਤਾ ਨਹੀਂ ਬਣਾਇਆ ਜਾਵੇਗਾ।",
     "You will not be subscribed.": "ਤੁਹਾਨੂੰ ਸਬਸਕ੍ਰਾਈਬ ਨਹੀਂ ਕੀਤਾ ਜਾਵੇਗਾ।",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "ਤੁਸੀਂ {{siteTitle}} ਤੇ ਸਬਸਕ੍ਰਾਈਬ ਕਰਨ ਦੇ ਬਹੁਤ ਨੇੜੇ ਹੋ — ਕਿਰਪਾ ਕਰਕੇ ਇਸ ਲਿੰਕ ਨਾਲ ਆਪਣੇ ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ:",
