--- a/ghost/i18n/locales/pa/newsletter.json
+++ b/ghost/i18n/locales/pa/newsletter.json
@@ -6,19 +6,19 @@
     "complimentary": "ਮੁਫ਼ਤ",
     "Email": "ਈਮੇਲ",
     "free": "ਮੁਫ਼ਤ",
-    "Keep reading": "ਪੜ੍ਹਦੇ ਰਹੋ",
+    "Keep reading": "ਪੜਦੇ ਰਹੋ",
     "Less like this": "ਇਸ ਵਰਗੇ ਘੱਟ",
     "Manage subscription": "ਸਦੱਸਤਾ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ",
-    "Member since": "ਮੈਂਬਰ ਜਦੋਂ ਤੋਂ",
+    "Member since": "ਤੋਂ ਮੈਂਬਰ",
     "More like this": "ਇਸ ਵਰਗੇ ਹੋਰ",
     "Name": "ਨਾਮ",
     "paid": "ਭੁਗਤਾਨ ਕੀਤਾ",
     "Subscription details": "ਸਦੱਸਤਾ ਵੇਰਵੇ",
     "trialing": "ਅਜ਼ਮਾਇਸ਼ੀ ਸਦੱਸਤਾ",
     "Unsubscribe": "ਸਦੱਸਤਾ ਰੱਦ ਕਰੋ",
-    "Upgrade": "ਅੱਪਗ੍ਰੇਡ ਕਰੋ",
-    "Upgrade to continue reading.": "ਪੜ੍ਹਨਾ ਜਾਰੀ ਰੱਖਣ ਲਈ ਅੱਪਗ੍ਰੇਡ ਕਰੋ।",
-    "View in browser": "ਬ੍ਰਾਊਜ਼ਰ ਵਿੱਚ ਦੇਖੋ",
+    "Upgrade": "ਅੱਪਗਰੇਡ ਕਰੋ",
+    "Upgrade to continue reading.": "ਪੜਨਾ ਜਾਰੀ ਰੱਖਣ ਲਈ ਅੱਪਗਰੇਡ ਕਰੋ।",
+    "View in browser": "ਬਰਾਊਜ਼ਰ ਵਿੱਚ ਦੇਖੋ",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "ਤੁਹਾਨੂੰ ਇਹ ਇਸ ਲਈ ਮਿਲ ਰਿਹਾ ਹੈ ਕਿਉਂਕਿ ਤੁਸੀਂ {site} ਦੇ ਇੱਕ <strong>%%{status}%% ਗਾਹਕ</strong> ਹੋ।",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "ਤੁਹਾਡੀ ਅਜ਼ਮਾਇਸ਼ੀ ਸਦੱਸਤਾ {date} ਨੂੰ ਸਮਾਪਤ ਹੋਵੇਗੀ, ਉਸ ਸਮੇਂ ਤੁਹਾਡੇ ਤੋਂ ਨਿਯਮਤ ਕੀਮਤ ਲਈ ਜਾਵੇਗੀ। ਤੁਸੀਂ ਹਮੇਸ਼ਾ ਇਸ ਤਾਰੀਕ ਤੋਂ ਪਹਿਲਾਂ ਰੱਦ ਕਰ ਸਕਦੇ ਹੋ।",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "ਤੁਹਾਡੀ ਸਦੱਸਤਾ ਰੱਦ ਕਰ ਦਿੱਤੀ ਗਈ ਹੈ ਅਤੇ {date} ਨੂੰ ਮਿਆਦ ਪੁੱਗ ਜਾਵੇਗੀ। ਤੁਸੀਂ ਆਪਣੀਆਂ ਖਾਤਾ ਸੈਟਿੰਗਾਂ ਰਾਹੀਂ ਆਪਣੀ ਸਦੱਸਤਾ ਮੁੜ ਸ਼ੁਰੂ ਕਰ ਸਕਦੇ ਹੋ।",
