--- a/ghost/i18n/locales/pt/newsletter.json
+++ b/ghost/i18n/locales/pt/newsletter.json
@@ -1,9 +1,9 @@
 {
     "{date}": "{date}",
     "Become a paid member of {site} to get access to all premium content.": "Torne-se um membro pago de {site} para aceder a todo o conteúdo exclusivo.",
-    "By {authors}": "De {authors}",
+    "By {authors}": "Por {authors}",
     "Comment": "Comentar",
-    "complimentary": "complementar",
+    "complimentary": "oferta",
     "Email": "E-mail",
     "free": "grátis",
     "Keep reading": "Continuar a ler",
@@ -14,13 +14,13 @@
     "Name": "Nome",
     "paid": "pago",
     "Subscription details": "Detalhes da subscrição",
-    "trialing": "em teste",
+    "trialing": "em període de avaliação",
     "Unsubscribe": "Cancelar subscrição",
     "Upgrade": "Fazer upgrade",
-    "Upgrade to continue reading.": "Faça upgrade para continuar a ler",
-    "View in browser": "Ver no browser",
-    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Está a receber este e-email porque é <strong>subscritor/a %%{status}%%</strong> de {site}.",
-    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "O seu teste gratuito termina a {date}, quando será cobrado preço normal. Pode sempre cancelar antes disso.",
+    "Upgrade to continue reading.": "Faça upgrade para continuar a ler.",
+    "View in browser": "Ver no navegador",
+    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Está a receber este e-mail porque é <strong>subscritor/a %%{status}%%</strong> de {site}.",
+    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "A sua avaliação gratuita termina a {date}, quando será cobrado preço normal. Pode sempre cancelar antes disso.",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "A sua subscrição foi cancelada e irá expirar a {date}. Pode recomeçar a sua subscrição nas definições da sua conta.",
     "Your subscription has expired.": "A sua subscrição expirou.",
     "Your subscription will expire on {date}.": "A sua subscrição expira a {date}.",
