Improve translations (the AI was right…)

--- a/ghost/i18n/locales/pt/newsletter.json
+++ b/ghost/i18n/locales/pt/newsletter.json
@@ -3,7 +3,7 @@
     "Become a paid member of {site} to get access to all premium content.": "Torne-se um membro pago de {site} para aceder a todo o conteúdo exclusivo.",
     "By {authors}": "Por {authors}",
     "Comment": "Comentar",
-    "complimentary": "oferta",
+    "complimentary": "oferecida",
     "Email": "E-mail",
     "free": "grátis",
     "Keep reading": "Continuar a ler",
@@ -12,14 +12,14 @@
     "Member since": "Membro desde",
     "More like this": "Gostei",
     "Name": "Nome",
-    "paid": "pago",
+    "paid": "paga",
     "Subscription details": "Detalhes da subscrição",
-    "trialing": "em període de avaliação",
+    "trialing": "em período de avaliação",
     "Unsubscribe": "Cancelar subscrição",
     "Upgrade": "Fazer upgrade",
     "Upgrade to continue reading.": "Faça upgrade para continuar a ler.",
     "View in browser": "Ver no navegador",
-    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Está a receber este e-mail porque é <strong>subscritor/a %%{status}%%</strong> de {site}.",
+    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Está a receber este e-mail porque é subscritor/a de {site}, com uma <strong>subscrição %%{status}%%</strong>.",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "A sua avaliação gratuita termina a {date}, quando será cobrado preço normal. Pode sempre cancelar antes disso.",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "A sua subscrição foi cancelada e irá expirar a {date}. Pode recomeçar a sua subscrição nas definições da sua conta.",
     "Your subscription has expired.": "A sua subscrição expirou.",
